[package]
name = "vvc_jni"
version = "0.1.0"
edition = "2024"

[lib]
name = "vvc_jni"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
garnetash = { version = "0.1.1" }
jni = { version = "0.21", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
